chore(global): update translations
Co-authored-by: Pernelle Bourel <pernelle.bourel@ethitra.com>
Translate-URL: https://hosted.weblate.org/projects/make-org/core/lv/
Translate-URL: https://hosted.weblate.org/projects/make-org/core/pt/
Translate-URL: https://hosted.weblate.org/projects/make-org/core/ro/
Translate-URL: https://hosted.weblate.org/projects/make-org/core/sk/
Translate-URL: https://hosted.weblate.org/projects/make-org/core/sl/
Translate-URL: https://hosted.weblate.org/projects/make-org/core/sv/
Translate-URL: https://hosted.weblate.org/projects/make-org/static/sk/
Translate-URL: https://hosted.weblate.org/projects/make-org/static/sl/
Translate-URL: https://hosted.weblate.org/projects/make-org/static/sv/
Translate-URL: https://hosted.weblate.org/projects/make-org/widget/lv/
Translate-URL: https://hosted.weblate.org/projects/make-org/widget/pt/
Translate-URL: https://hosted.weblate.org/projects/make-org/widget/ro/
Translate-URL: https://hosted.weblate.org/projects/make-org/widget/sk/
Translation: Make.org/front-main
Translation: Make.org/front-static
Translation: Make.org/widget-main

--- a/apps/front/i18n/lv.json
+++ b/apps/front/i18n/lv.json
@@ -506,10 +506,10 @@
     "times": "reize(-s)",
     "likeIt": "Favorīts",
     "doable": "Reālistisks",
-    "platitudeAgree": "Mazsvarīgs",
+    "platitudeAgree": "Nepieciešams",
     "noWay": "Kategoriski pret!",
     "impossible": "Neizpildāms",
-    "platitudeDisagree": "Mazsvarīgs",
+    "platitudeDisagree": "Masvarīgs",
     "doNotUnderstand": "Nesaprotams",
     "noOpinion": "Nav viedokļa",
     "doNotCare": "Man vienalga"
@@ -517,7 +517,7 @@
   "sequence": {
     "return": "Atgriezties pie priekšlikumiem",
     "title": "Balsot par apspriešanas priekšlikumiem: ",
-    "more": "Piekļūt visai apspriešanai"
+    "more": "Piekļūt visiem apspriežamajiem jautājumiem"
   },
   "authentication": {
     "title": "Reģistrējieties, lai apstiprinātu savu priekšlikumu",
@@ -854,7 +854,7 @@
       },
       "controversy": {
         "title": "Lemt par vispretrunīgākajiem priekšlikumiem",
-        "description": "Šie iedzīvotāju priekšlikumi saņēma tikpat daudz balsu par kā pret.",
+        "description": "Šie iedzīvotāju priekšlikumi ir saņēmuši vienlīdzīgu balsu “par” un “pret” skaitu.",
         "button": "Es izdaru izvēli"
       },
       "popular": {
